---
source: src/transform.rs
expression: result
---
expressions:
  - lhs: ~0
    rhs:
      NonTerminal:
        - ~1
        - name: ""
  - lhs: ~2
    rhs:
      NonTerminal:
        - B
        - name: ""
  - lhs: ~2
    rhs:
      NonTerminal:
        - C
        - name: ""
  - lhs: ~1
    rhs:
      Multiple:
        - - NonTerminal:
              - ~2
              - name: ~
          - NonTerminal:
              - ~1
              - name: ""
        - name: ~
  - lhs: ~1
    rhs: Epsilon
  - lhs: A
    rhs:
      Multiple:
        - - NonTerminal:
              - ~0
              - name: ""
          - NonTerminal:
              - D
              - name: ""
        - name: ""

